Bug 154028 - Dolphin file selection with mouse (and CTRL) doesn't work correctly
Summary: Dolphin file selection with mouse (and CTRL) doesn't work correctly
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.12.2
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
: 153939 164021 168222 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-12-14 14:07 UTC by FiNeX
Modified: 2008-11-21 15:55 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-12-14 14:07:12 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

The dolphin files selection with mouse has strange behaviour:

1. Select multiple files with mouse
2. while pressing CTRL select other n files, you can select them in two ways:
2.1. clicking on each new file (and it works)
2.2. selecting the new files to add to the existing selection with a rectangular selection cause the first file selected (at point 1) to be de-selected.

It seems that the rectangular selection start a new selection ignoring the CTRL button.
Comment 1 FiNeX 2007-12-15 15:11:35 UTC
It seems related to the update done by ereslibre on revision r748545.

Should we close this report or should we leave it open? On the svn log ereslibre has wrote:
"This is only a workaround and should be removed when fixed on Qt (I am going to debug it on Qt, to see where the fail is)."

Thanks for all! :-)
Comment 2 Rafael Fernández López 2007-12-15 17:48:20 UTC
SVN commit 748822 by ereslibre:

This fixes the selection problem with the mouse _only_ for the categorized view. QListView has a bug that will toggle the last selection done, have to report it to TT.

BUG: 154028
CCMAIL: wstephenson@kde.org


 M  +81 -30    kcategorizedview.cpp  
 M  +3 -0      kcategorizedview.h  
 M  +1 -1      kcategorizedview_p.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=748822
Comment 3 FiNeX 2007-12-15 18:53:25 UTC
Ok, thanks Rafael!
Comment 4 Rafael Fernández López 2007-12-20 16:43:39 UTC
*** Bug 153939 has been marked as a duplicate of this bug. ***
Comment 5 FiNeX 2007-12-20 16:55:39 UTC
I'm reopening this bug until it will be completely fixed. Just as a reminder :-)
Comment 6 Rosetzky Cedric 2008-02-09 14:43:42 UTC
When do you think this bug will be resolved?
Comment 7 FiNeX 2008-02-09 15:12:11 UTC
I hope soon :-)
Comment 8 Rafael Fernández López 2008-02-21 15:58:03 UTC
I reported the issue to Trolltech. When this is fixed (scheduled for 4.3.3), I will close this bug as FIXED.

Trolltech task: http://trolltech.com/developer/task-tracker/index_html?id=199822&method=entry
Comment 9 Rosetzky Cedric 2008-02-25 11:06:44 UTC
KDE is now using QT-4.4, Trolltech didn't fix the bug in this version yet?
Comment 10 Rafael Fernández López 2008-02-25 11:48:08 UTC
Trolltech still works on 4.3. This issue has been delayed to 4.3.5. They will fix it in 4.3.5 and I guess it will be forward ported to 4.4.x.

I am aware of this task and I periodically poll it.
Comment 11 FiNeX 2008-05-13 10:44:11 UTC
Qt 4.3.5 ha not yet be released, in the meanwhile 4.4 final has been released... without the fix :-(
Comment 12 FiNeX 2008-06-07 13:20:07 UTC
Something new about this problem?
Comment 13 Peter Penz 2008-06-07 13:25:11 UTC
> Something new about this problem? 

I think we have to wait for Qt 4.4.1 :-(
Comment 14 Rafael Fernández López 2008-06-07 13:47:53 UTC
Hi there,

I have been asked on our bug report 
(http://bugs.kde.org/show_bug.cgi?id=154028) that the issue of Qt 
http://trolltech.com/developer/task-tracker/index_html?id=199822&method=entry 
has not been solved yet.

I can read at the end of the report "Unable to reproduce".

Pretty, amazed, recompiled the app example, and I _CAN_ reproduce the problem.

Steps:

1) Rect Selection
2) Ctrl + Rect Selection on other items

First selection is lost. Not only happy with that, I went further, and you 
have another way of reproducing:

1) Rect Selection
2) Ctrl * Single click in an element
3) Rect Selection on other items

Last selection is lost, first rect selection is kept.

I am pretty amazed the developer said "Unable to reproduce"... when is trivial 
to do so.

OTOH, I also want to remember we have another issue 
(http://trolltech.com/developer/task-
tracker/index_html?method=entry&id=202842) which also has been said it has 
been fixed, but I don't think so. (Qt 4.4.1 here - qt-copy). Steps to 
reproduce:

1) Click on an item.
2) Click on the viewport.

Item becomes unselected, and the docs says it cannot 
(http://doc.trolltech.com/4.4/qabstractitemview.html#SelectionMode-enum). 
Quoting "When the user selects an item, any already-selected item becomes 
unselected, and the user cannot unselect the selected item.".

For this second example, you can use the one that is on the first mentioned 
task (#199822), but setting:

listView->setSelectionMode(QListView::SingleSelection);

instead of

listView->setSelectionMode(QListView::ExtendedSelection);

As you might understand this is specially critical for the file manager (one 
of the most important apps in the system), so I really hope this gets really 
fixed as soon as possible.

 
Regards,
Rafael Fern
Comment 15 Peter Penz 2008-06-07 13:53:34 UTC
@Rafael: have you sent comment #14 to Trolltech?
Comment 16 Rafael Fernández López 2008-06-07 14:17:04 UTC
Yes, CCMAILING to this bug, but I guess I just missed... they should come with 4.4.1, and we are in 4.4.0. ¬¬
Comment 17 FiNeX 2008-06-07 17:14:57 UTC
Doing some tests I've noted that with the default KDE settings "single-click to open files and folders" we have this problem. Instead, with the "double-click to open files and folders..." the problem is solved. Maybe this could help.
Comment 18 qt-bugs 2008-06-09 12:42:25 UTC
On Saturday, 07. Jun 2008 13:46 Rafael Fern
Comment 19 Rafael Fernández López 2008-06-09 15:29:37 UTC
Hi,

> Task 199822 has been fixed for Qt 4.4.0.  Could I ask what version of Qt
> you are using?


I am using  
http://websvn.kde.org/trunk/qt-copy/README.qt-copy?revision=804414&view=markup  
(qt-copy, which as the README says, it is 4.4.0). Thiago said those  
fixes marked for 4.3.5 were coming with 4.4.1.

> Task 202842 has a documentation fix. You can view it in our snapshot
> documentation here:
> http://doc.trolltech.com/4.4-snapshot/qabstractitemview.html#SelectionMode-enum


I really didn't expect this kind of 'fix'... but OK...


Regards,
Rafael Fernández López.
Comment 20 qt-bugs 2008-06-09 16:43:40 UTC
On Monday, 09. Jun 2008 23:34 Rafael Fernández  López wrote:
> Hi,
>
> > Task 199822 has been fixed for Qt 4.4.0.  Could I ask what version
> > of Qt
> > you are using?
>
> I am using
> http://websvn.kde.org/trunk/qt-copy/README.qt-copy?revision=804414&view=markup
> (qt-copy, which as the README says, it is 4.4.0). Thiago said those
> fixes marked for 4.3.5 were coming with 4.4.1.
>
> > Task 202842 has a documentation fix. You can view it in our snapshot
> > documentation here:
> >
> >

http://doc.trolltech.com/4.4-snapshot/qabstractitemview.html#SelectionMode-enum
>
> I really didn't expect this kind of 'fix'... but OK...
>
>
> Regards,
> Rafael Fernández López.
>


Hi Rafael,

Have you considered trying the 4.4 snapshot to see if the bug has been
fixed? The snapshots can be found here:
http://trolltech.com/developer/downloads/qt/snapshots

Thanks,
Kavindra Palaraja
Support Engineer
Trolltech ASA, Oslo
http://www.trolltech.com
Comment 21 Roland Wolters 2008-06-10 02:48:44 UTC
I can reproduce with the current KDE4Daily image that the Ctrl key isn't of any use during file selection (Dolphin/Konqueror), unlike in KDE 3.
Any new information on the topic, any further information needed?
Comment 22 FiNeX 2008-06-10 09:16:25 UTC
@Roland: could you test if with the "double click" activated, the bug is still reproducible?
Comment 23 Roland Wolters 2008-06-10 12:41:56 UTC
@FiNeXTHe bug is reproducable for both configurations, double-click and single-click. I tried it with current KDE4Daily as well as with the OpenSuse packages some days ago.
Comment 24 Ivo Anjo 2008-06-10 13:18:59 UTC
I just built qt from a snapshot: ftp://ftp.trolltech.com/qt/snapshots/qt-all-opensource-src-4.4.1-snapshot-20080610.tar.gz , and re-tested the example from http://trolltech.com/developer/task-tracker/index_html?id=199822&method=entry and it seems to work ok, so I guess it really is fixed, just a matter of time before the fix (finally) hits the released version.
Comment 25 FiNeX 2008-06-11 10:20:25 UTC
Ok, could I let this report opened until I'll se it fixed?
Comment 26 Rafael Fernández López 2008-06-11 10:27:23 UTC
Of course, but I am confident you will be see it on 4.4.1 :)
Comment 27 Roland Wolters 2008-06-11 15:51:01 UTC
So it depends on the Qt version alone, not on KDE?
Comment 28 Peter Penz 2008-06-14 10:35:59 UTC
*** Bug 164021 has been marked as a duplicate of this bug. ***
Comment 29 Roland Wolters 2008-06-26 13:03:55 UTC
Current qt-copy fixes the bug in my virtual machine (KDE4Daily).
Comment 30 Peter Penz 2008-06-26 13:06:30 UTC
Thanks Roland for testing, we'll set this bug to fixed if this version of qt-copy is officially used in trunk. But good to hear that the fix from the Trolls is available already :-)
Comment 31 FiNeX 2008-08-04 22:56:52 UTC
*** Bug 168222 has been marked as a duplicate of this bug. ***
Comment 32 Alexey Chernov 2008-08-24 20:55:43 UTC
Well, in KDE 4.1 (with Qt 4.4.1) CTRL-bug suddenly went away, but there's still another one with SHIFT selection. I mean, if I select a file with CTRL+click and then select a range of files with SHIFT+click on last file, random files out of this range become selected. There's #163451 bug for SHIFT selection problem, but as I've read it's about some other bug.
Comment 33 Rafael Fernández López 2008-08-24 21:59:13 UTC
As we promised, this is fixed on 4.4.1. Since it has been confirmed, I am closing this bug.
Comment 34 Alexey Chernov 2008-08-24 22:07:46 UTC
OK, so I will post about SHIFT problem to the certain bug report. This bug with CTRL seems to be fixed.
Comment 35 FiNeX 2008-11-21 15:55:09 UTC
CTRL selection now is working. I confirm it too. the SHIFT problem still persist, but it is another report :)