This fixes the selection problem with the mouse _only_ for the categorized view. QListView has a bug that will toggle the last selection done, have to report it to TT.

BUG: 154028
CCMAIL: wstephenson@kde.org

svn path=/trunk/KDE/kdebase/apps/; revision=748822